--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-v0-project",
+  "type": "module",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,7 +14,7 @@
     "@edge-runtime/vm": "latest",
     "@hookform/resolvers": "^3.9.1",
     "@neondatabase/serverless": "latest",
-    "@prisma/client": "latest",
+    "@prisma/client": "^6.10.1",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "latest",
     "@radix-ui/react-aspect-ratio": "latest",
@@ -55,6 +56,7 @@
     "clsx": "^2.1.1",
     "cmdk": "latest",
     "date-fns": "4.1.0",
+    "dotenv": "^16.5.0",
     "embla-carousel-react": "latest",
     "happy-dom": "latest",
     "input-otp": "latest",
@@ -84,7 +86,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8.5",
-    "prisma": "^5.17.0",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
