--- a/package.json
+++ b/package.json
@@ -62,8 +62,8 @@
     "input-otp": "latest",
     "jsdom": "latest",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
-    "next-auth": "latest",
+    "next": "^15.3.4",
+    "next-auth": "^4.24.7",
     "next-themes": "latest",
     "nodemailer": "latest",
     "path": "latest",
