--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@auth/core": "latest",
@@ -86,7 +87,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8.5",
-    "prisma": "^5.22.0",
+    "prisma": "^6.10.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
