--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start"
@@ -64,7 +64,7 @@
     "jsdom": "latest",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
-    "next-auth": "latest",
+    "next-auth": "^4.24.11",
     "next-themes": "latest",
     "nodemailer": "latest",
     "path": "latest",
