--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "next dev --turbo",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "codex:setup": "npm install && npx prisma generate && echo 'Ambiente inicializado com sucesso!'"
   },
   "dependencies": {
     "@auth/core": "latest",
