--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "lint": "next lint",
     "start": "next start",
     "codex:setup": "npm install && npx prisma generate && echo 'Ambiente inicializado com sucesso!'",
-    "test:db": "set NODE_OPTIONS=--loader ts-node/esm && ts-node --project tsconfig.scripts.json scripts/test-db-connection.ts"
+    "test:db": "set NODE_OPTIONS=--loader ts-node/esm && ts-node --project tsconfig.scripts.json scripts/test-db-connection.ts",
+    "test:db:codex": "node scripts/test-db-connection.cjs",
+    "test:db:vercel": "node scripts/test-db-vercel.cjs",
+    "show:roles": "node --loader ts-node/esm scripts/show-roles.ts --project tsconfig.scripts.json"
+    
 
   },
   "dependencies": {
