--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
- "scripts": {
+  "scripts": {
     "build": "next build",
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
+    "seed": "tsx prisma/seed.ts",
     "codex:setup": "npm install && npx prisma generate && echo 'Ambiente inicializado com sucesso!'"
   },
   "dependencies": {
@@ -64,7 +65,7 @@
     "next": "15.2.4",
     "next-auth": "latest",
     "next-themes": "latest",
-    "nodemailer": "latest",
+    "nodemailer": "6.9.0",
     "path": "latest",
     "react": "^19",
     "react-day-picker": "latest",
@@ -87,6 +88,7 @@
     "postcss": "^8.5",
     "prisma": "^6.10.1",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3"
   }
 }
