--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "globals": "^16.2.0",
     "postcss": "^8.5",
     "prisma": "^6.10.1",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.3",
     "typescript": "^5",
