--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "postcss": "^8.5",
     "prisma": "^6.10.1",
     "tailwind-scrollbar": "^4.0.2",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.3",
     "typescript": "^5",
