--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "globals": "^16.2.0",
     "postcss": "^8.5",
     "prisma": "^6.10.1",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.3",
