--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint:fix": "eslint app components --ext .js,.ts,.tsx --fix --ignore-pattern '**/*.css' --ignore-pattern '**/*.module.css'",
     "seed": "tsx prisma/seed.ts",
     "start": "next start",
-    "test": "vitest run"
+    "test": "vitest"
   },
   "eslintIgnore": [
     "**/*.css"
@@ -54,7 +54,6 @@
     "@vercel/blob": "latest",
     "@vercel/speed-insights": "latest",
     "@vitest/browser": "latest",
-    "@vitest/ui": "latest",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "latest",
     "chalk": "latest",
@@ -67,12 +66,10 @@
     "happy-dom": "latest",
     "input-otp": "latest",
     "jiti": "latest",
-    "jsdom": "latest",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-auth": "latest",
     "next-themes": "latest",
-    "node:crypto": "latest",
     "nodemailer": "6.9.0",
     "react": "^19",
     "react-day-picker": "latest",
@@ -94,14 +91,20 @@
     "@eslint/js": "^9.30.0",
     "@eslint/json": "^0.12.0",
     "@eslint/markdown": "^6.6.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
     "@typescript-eslint/parser": "^8.35.0",
+    "@vitest/ui": "latest",
     "eslint": "^9.30.0",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.2.0",
+    "jsdom": "latest",
+    "node-polyfill": "^1.0.0",
     "postcss": "^8.5",
     "prisma": "^6.10.1",
     "tailwind-scrollbar": "^4.0.2",
@@ -110,6 +113,8 @@
     "tsx": "^4.20.3",
     "typescript": "^5",
     "typescript-eslint": "^8.35.0",
+    "vite": "^7.0.0",
+    "vite-plugin-node-stdlib-browser": "^0.2.1",
     "vitest": "^3.2.4"
   }
 }
