chore: format code with prettier

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,8 +1,4 @@
 {
   "extends": "./tsconfig.json",
-  "include": [
-    "eslint.config.js",
-    "app",
-    "components"
-  ]
+  "include": ["eslint.config.js", "app", "components"]
 }
