--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,7 +1,7 @@
 onlyBuiltDependencies:
-  - '@prisma/client'
-  - '@prisma/engines'
-  - '@vercel/speed-insights'
+  - "@prisma/client"
+  - "@prisma/engines"
+  - "@vercel/speed-insights"
   - esbuild
   - prisma
   - sharp
