chore: atualiza dependências e corrige configuração do package.json

--- a/package.json
+++ b/package.json
@@ -71,8 +71,6 @@
     "next": "15.2.4",
     "next-auth": "latest",
     "next-themes": "latest",
-    "node:crypto": "latest",
-    "node:path": "latest",
     "nodemailer": "6.9.0",
     "react": "^19",
     "react-day-picker": "latest",
@@ -109,6 +107,7 @@
     "jsdom": "latest",
     "node-polyfill": "^1.0.0",
     "postcss": "^8.5",
+    "prettier": "^3.6.2",
     "prisma": "^6.10.1",
     "tailwind-scrollbar": "^4.0.2",
     "tailwind-scrollbar-hide": "^4.0.0",
