feat: corrigir hover e animações das seções Categories e WhyChooseUs
- Corrigir posicionamento da linha de hover laranja/amarela no bottom dos cards
- Implementar animação sequencial idêntica em ambas seções
- Padronizar background bg-gray-50 nas seções Categories e FeaturedMaterials
- Mover linha de hover para fora do CardContent para posicionamento correto
- Manter estrutura consistente entre components WhyChooseUs e Categories
- Limpar regras CSS desnecessárias no globals.css

--- a/package.json
+++ b/package.json
@@ -63,11 +63,12 @@
     "date-fns": "latest",
     "dotenv": "latest",
     "embla-carousel-react": "latest",
+    "framer-motion": "^12.23.0",
     "happy-dom": "latest",
     "input-otp": "latest",
     "jiti": "latest",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "15.4.0-canary.112",
     "next-auth": "latest",
     "next-themes": "latest",
     "nodemailer": "6.9.0",
