--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,10 @@
   "trailingComma": "all",
   "printWidth": 100,
   "tabWidth": 2,
+  "useTabs": false,
   "arrowParens": "always",
-  "endOfLine": "auto"
+  "endOfLine": "lf",
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "quoteProps": "as-needed"
 }
