--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.2.0",
     "jsdom": "latest",
     "node-polyfill": "^1.0.0",
