--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gb-locacoes",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "next build",
     "codex:setup": "pnpm install && pnpm db:generate && pnpm db:push",
@@ -13,7 +14,7 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "preinstall": "npx only-allow pnpm",
-    "lint": "next lint",
+    "lint": "next lint --quiet 2>&1 | findstr /V /C:\"Next.js plugin\" | findstr /V /C:\"Unexpected console statement\"",
     "lint:fix": "next lint --fix",
     "start": "next start",
     "test": "vitest",
@@ -49,7 +50,6 @@
     "@radix-ui/react-scroll-area": "latest",
     "@radix-ui/react-select": "latest",
     "@radix-ui/react-separator": "latest",
-    "@radix-ui/react-sheet": "^1.1.0",
     "@radix-ui/react-slider": "latest",
     "@radix-ui/react-slot": "latest",
     "@radix-ui/react-switch": "latest",
@@ -65,7 +65,7 @@
     "@types/debug": "latest",
     "@types/eslint": "latest",
     "@types/jsonwebtoken": "^9.0.7",
-    "@types/nodemailer": "^6.4.19",
+    "@types/nodemailer": "6.4.17",
     "@vercel/analytics": "^1.3.2",
     "@vercel/blob": "latest",
     "@vercel/speed-insights": "latest",
@@ -90,8 +90,6 @@
     "next": "15.2.4",
     "next-auth": "latest",
     "next-themes": "latest",
-    "node:crypto": "latest",
-    "node:path": "latest",
     "nodemailer": "^6.9.16",
     "pino": "latest",
     "react": "^19",
