--- a/package.json
+++ b/package.json
@@ -32,9 +32,6 @@
     "@next/bundle-analyzer": "^15.1.3",
     "@prisma/client": "latest",
     "@radix-ui/react-accordion": "latest",
-    "@radix-ui/react-alert-dialog": "latest",
-    "@radix-ui/react-aspect-ratio": "latest",
-    "@radix-ui/react-avatar": "latest",
     "@radix-ui/react-checkbox": "latest",
     "@radix-ui/react-collapsible": "latest",
     "@radix-ui/react-context-menu": "latest",
@@ -58,6 +55,9 @@
     "@radix-ui/react-toggle": "latest",
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "next": "^14.0.0",
     "@supabase/supabase-js": "^2.46.2",
     "@sveltejs/kit": "latest",
     "@testing-library/dom": "latest",
@@ -87,17 +87,12 @@
     "input-otp": "latest",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
-    "next-auth": "latest",
     "next-themes": "latest",
     "nodemailer": "^6.9.16",
     "pino": "latest",
-    "react": "^19",
     "react-day-picker": "latest",
-    "react-dom": "^19",
     "react-hook-form": "latest",
     "react-resizable-panels": "latest",
-    "recharts": "latest",
     "resend": "latest",
     "scrollreveal": "^4.0.9",
     "sonner": "latest",
@@ -117,11 +112,6 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/scrollreveal": "^0.0.11",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.17.0",
     "eslint-config-next": "15.1.3",
     "jsdom": "^25.0.1",
     "postcss": "^8.5",
@@ -131,7 +121,9 @@
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.2",
     "typescript": "^5",
-    "vitest": "^2.1.8"
+    "vitest": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
+    "@vitest/browser": "^3.2.4"
   },
   "packageManager": "pnpm@8.8.0",
   "engines": {
