--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,7 @@
   "build": {
     "env": {},
     "installCommand": "pnpm install",
-    "buildCommand": "pnpm run build"
-  },
-  "eslint": {
-    "ignoreDuringBuilds": true
+    "buildCommand": "npm run lint && npm run build"
   },
   "typescript": {
     "ignoreBuildErrors": true
