--- a/package.json
+++ b/package.json
@@ -129,5 +129,10 @@
   "engines": {
     "node": ">=18.0.0",
     "pnpm": ">=8.0.0"
+  },
+  "workspaces": {
+    "packages": [
+      "."
+    ]
   }
 }
