fix: restore next-auth dependency

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "next": "^14.0.0",
+    "next-auth": "latest",
     "@supabase/supabase-js": "^2.46.2",
     "@sveltejs/kit": "latest",
     "@testing-library/dom": "latest",
