--- a/package.json
+++ b/package.json
@@ -55,9 +55,6 @@
     "@radix-ui/react-toggle": "latest",
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "next": "^14.0.0",
     "@supabase/supabase-js": "^2.46.2",
     "@sveltejs/kit": "latest",
     "@testing-library/dom": "latest",
@@ -87,10 +84,13 @@
     "input-otp": "latest",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
+    "next": "^14.0.0",
     "next-themes": "latest",
     "nodemailer": "^6.9.16",
     "pino": "latest",
+    "react": "^18.2.0",
     "react-day-picker": "latest",
+    "react-dom": "^18.2.0",
     "react-hook-form": "latest",
     "react-resizable-panels": "latest",
     "resend": "latest",
@@ -112,6 +112,9 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/node": "^22",
+    "@types/react": "^18.2.0",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "eslint-config-next": "15.1.3",
     "jsdom": "^25.0.1",
     "postcss": "^8.5",
@@ -121,9 +124,7 @@
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.2",
     "typescript": "^5",
-    "vitest": "^3.2.4",
-    "@vitest/ui": "^3.2.4",
-    "@vitest/browser": "^3.2.4"
+    "vitest": "^3.2.4"
   },
   "packageManager": "pnpm@8.8.0",
   "engines": {
