--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
     "next": "^14.0.0",
+    "next-auth": "^4.24.11",
     "next-themes": "latest",
     "nodemailer": "^6.9.16",
     "pino": "latest",
