--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "images": {
-    "formats": ["image/avif", "image/webp"]
+    "formats": ["image/avif", "image/webp"],
+    "sizes": [16, 32, 48, 64, 96, 128, 256, 384, 512, 1024, 2048]
   }
 }
