fix: adiciona campo packages obrigatório no pnpm-workspace.yaml

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,15 @@
+
+packages:
+  - 'app'
+  - 'components'
+  - 'hooks'
+  - 'lib'
+  - 'middlewares'
+  - 'prisma'
+  - 'schemas'
+  - 'types'
+  - 'tests'
+
 onlyBuiltDependencies:
   - '@prisma/client'
   - '@prisma/engines'
