--- a/package.json
+++ b/package.json
@@ -127,7 +127,6 @@
   },
   "packageManager": "pnpm@8.8.0",
   "engines": {
-    "node": ">=18.0.0",
-    "pnpm": ">=8.0.0"
+    "node": "20.x"
   }
 }
