--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@edge-runtime/vm": "latest",
     "@emotion/is-prop-valid": "latest",
     "@eslint/js": "latest",
-    "@hookform/resolvers": "^3.10.0",
+    "@hookform/resolvers": "^5.2.0",
     "@next/bundle-analyzer": "^15.1.3",
     "@prisma/client": "latest",
     "@radix-ui/react-accordion": "latest",
@@ -58,7 +58,6 @@
     "@supabase/supabase-js": "^2.46.2",
     "@sveltejs/kit": "latest",
     "@testing-library/dom": "latest",
-    "@types/bcryptjs": "^2.4.6",
     "@types/debug": "latest",
     "@types/eslint": "latest",
     "@types/jsonwebtoken": "^9.0.7",
@@ -83,15 +82,15 @@
     "happy-dom": "latest",
     "input-otp": "latest",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.454.0",
-    "next": "^14.0.0",
+    "lucide-react": "^0.525.0",
+    "next": "^15.4.4",
     "next-auth": "4.24.11",
     "next-themes": "latest",
-    "nodemailer": "^6.9.16",
+    "nodemailer": "^7.0.5",
     "pino": "latest",
-    "react": "^18.2.0",
+    "react": "^19.1.0",
     "react-day-picker": "latest",
-    "react-dom": "^18.2.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "latest",
     "react-resizable-panels": "latest",
     "resend": "latest",
@@ -99,30 +98,31 @@
     "sonner": "latest",
     "stripe": "latest",
     "svelte": "latest",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar": "latest",
     "tailwindcss-animate": "^1.0.7",
     "typescript-eslint": "latest",
     "vaul": "latest",
     "vue": "latest",
     "vue-router": "latest",
-    "zod": "^3.24.1",
+    "zod": "^4.0.10",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
-    "@types/node": "^22",
-    "@types/react": "^18.2.0",
+    "@types/node": "^24.1.0",
+    "@types/react": "^19.1.8",
     "@vitest/browser": "^3.2.4",
     "@vitest/ui": "^3.2.4",
-    "eslint-config-next": "15.1.3",
-    "jsdom": "^25.0.1",
+    "eslint-config-next": "15.4.4",
+    "jsdom": "^26.1.0",
     "postcss": "^8.5",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "prisma": "^6.1.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.11",
     "tsx": "^4.19.2",
     "typescript": "^5",
     "vitest": "^3.2.4"
