--- a/package.json
+++ b/package.json
@@ -106,7 +106,10 @@
     "vue": "latest",
     "vue-router": "latest",
     "zod": "^4.0.10",
-    "zustand": "^5.0.2"
+    "zustand": "^5.0.2",
+    "tailwindcss": "^4.1.11",
+    "postcss": "^8.5.6",
+    "autoprefixer": "^10.4.21"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
@@ -116,14 +119,11 @@
     "@types/react": "^19.1.8",
     "@vitest/browser": "^3.2.4",
     "@vitest/ui": "^3.2.4",
-    "autoprefixer": "^10.4.21",
     "eslint-config-next": "15.4.4",
     "jsdom": "^26.1.0",
-    "postcss": "^8.5",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "prisma": "^6.1.0",
-    "tailwindcss": "^4.1.11",
     "tsx": "^4.19.2",
     "typescript": "^5",
     "vitest": "^3.2.4"
