--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "db:push": "prisma db push",
     "db:seed": "tsx prisma/seed.ts",
     "db:studio": "prisma studio",
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "preinstall": "npx only-allow pnpm",
@@ -29,7 +29,7 @@
     "@emotion/is-prop-valid": "latest",
     "@eslint/js": "latest",
     "@hookform/resolvers": "^5.2.0",
-    "@next/bundle-analyzer": "^15.1.3",
+    "@next/bundle-analyzer": "15.4.4",
     "@prisma/client": "latest",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-checkbox": "latest",
@@ -58,15 +58,18 @@
     "@supabase/supabase-js": "^2.46.2",
     "@sveltejs/kit": "latest",
     "@testing-library/dom": "latest",
+    "@types/bcryptjs": "^3.0.0",
     "@types/debug": "latest",
     "@types/eslint": "latest",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/nodemailer": "6.4.17",
+    "@types/react-dom": "^19.1.6",
     "@vercel/analytics": "^1.3.2",
     "@vercel/blob": "latest",
     "@vercel/speed-insights": "latest",
     "@vitest/browser": "latest",
     "@vitest/ui": "latest",
+    "autoprefixer": "^10.4.21",
     "bcryptjs": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -83,14 +86,15 @@
     "input-otp": "latest",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
-    "next": "^15.4.4",
+    "next": "15.4.4",
     "next-auth": "4.24.11",
     "next-themes": "latest",
     "nodemailer": "^7.0.5",
     "pino": "latest",
-    "react": "^19.1.0",
+    "postcss": "^8.5.6",
+    "react": "19.1.0",
     "react-day-picker": "latest",
-    "react-dom": "^19.1.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "latest",
     "react-resizable-panels": "latest",
     "resend": "latest",
@@ -100,23 +104,21 @@
     "svelte": "latest",
     "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar": "latest",
+    "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.7",
     "typescript-eslint": "latest",
     "vaul": "latest",
     "vue": "latest",
     "vue-router": "latest",
     "zod": "^4.0.10",
-    "zustand": "^5.0.2",
-    "tailwindcss": "^4.1.11",
-    "postcss": "^8.5.6",
-    "autoprefixer": "^10.4.21"
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/node": "^24.1.0",
-    "@types/react": "^19.1.8",
+    "@types/react": "19.1.8",
     "@vitest/browser": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "eslint-config-next": "15.4.4",
@@ -132,5 +134,10 @@
   "engines": {
     "node": ">=18.0.0",
     "pnpm": ">=8.0.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.1.8"
+    }
   }
 }
