--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "@next/bundle-analyzer": "15.4.4",
     "@prisma/client": "latest",
     "@radix-ui/react-accordion": "latest",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "latest",
     "@radix-ui/react-collapsible": "latest",
     "@radix-ui/react-context-menu": "latest",
@@ -97,6 +100,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "latest",
     "react-resizable-panels": "latest",
+    "recharts": "^3.1.0",
     "resend": "latest",
     "scrollreveal": "^4.0.9",
     "sonner": "latest",
