--- a/package.json
+++ b/package.json
@@ -72,7 +72,6 @@
     "@vercel/speed-insights": "latest",
     "@vitest/browser": "latest",
     "@vitest/ui": "latest",
-    "autoprefixer": "^10.4.21",
     "bcryptjs": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -94,7 +93,6 @@
     "next-themes": "latest",
     "nodemailer": "^7.0.5",
     "pino": "latest",
-    "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-day-picker": "latest",
     "react-dom": "19.1.0",
@@ -107,8 +105,6 @@
     "stripe": "latest",
     "svelte": "latest",
     "tailwind-merge": "^3.3.1",
-    "tailwind-scrollbar": "latest",
-    "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.7",
     "typescript-eslint": "latest",
     "vaul": "latest",
@@ -118,18 +114,21 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/node": "^24.1.0",
     "@types/react": "19.1.8",
     "@vitest/browser": "^3.2.4",
     "@vitest/ui": "^3.2.4",
+    "autoprefixer": "^10.4.21",
     "eslint-config-next": "15.4.4",
     "jsdom": "^26.1.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "prisma": "^6.1.0",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss": "^3.4.0",
     "tsx": "^4.19.2",
     "typescript": "^5",
     "vitest": "^3.2.4"
