--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "@supabase/supabase-js": "^2.46.2",
     "@sveltejs/kit": "latest",
     "@testing-library/dom": "latest",
-    "@types/bcryptjs": "^3.0.0",
     "@types/debug": "latest",
     "@types/eslint": "latest",
     "@types/jsonwebtoken": "^9.0.7",
@@ -103,7 +102,7 @@
     "scrollreveal": "^4.0.9",
     "sonner": "latest",
     "stripe": "latest",
-    "svelte": "latest",
+    "svelte": "^5.36.17",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript-eslint": "latest",
