chore: update dependencies to latest stable versions
- update @testing-library/dom 10.4.0 → 10.4.1
- update @testing-library/jest-dom 6.6.3 → 6.6.4
- update react-day-picker 9.8.0  9.8.1
- update svelte 5.36.17 → 5.37.0
- update lucide-react 0.525.0 → 0.526.0
- maintain TailwindCSS 3.4.17 for stability (v4.x still beta)
- maintain tailwind-scrollbar 3.1.0 for compatibility
- ensure build success and test coverage (2/2 passing)

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "@radix-ui/react-tooltip": "latest",
     "@supabase/supabase-js": "^2.46.2",
     "@sveltejs/kit": "latest",
-    "@testing-library/dom": "latest",
+    "@testing-library/dom": "^10.4.1",
     "@types/debug": "latest",
     "@types/eslint": "latest",
     "@types/jsonwebtoken": "^9.0.7",
@@ -86,14 +86,14 @@
     "happy-dom": "latest",
     "input-otp": "latest",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.525.0",
+    "lucide-react": "^0.526.0",
     "next": "15.4.4",
     "next-auth": "4.24.11",
     "next-themes": "latest",
     "nodemailer": "^7.0.5",
     "pino": "latest",
     "react": "19.1.0",
-    "react-day-picker": "latest",
+    "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0",
     "react-hook-form": "latest",
     "react-resizable-panels": "latest",
@@ -102,7 +102,7 @@
     "scrollreveal": "^4.0.9",
     "sonner": "latest",
     "stripe": "latest",
-    "svelte": "^5.36.17",
+    "svelte": "^5.37.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript-eslint": "latest",
@@ -113,7 +113,7 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.1.0",
     "@types/node": "^24.1.0",
     "@types/react": "19.1.8",
