--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.1.0",
     "@types/node": "^24.1.0",
@@ -126,8 +127,8 @@
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "prisma": "^6.1.0",
-    "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss": "^3.4.0",
+    "tailwind-scrollbar": "^4.0.2",
+    "tailwindcss": "^4.1.11",
     "tsx": "^4.19.2",
     "typescript": "^5",
     "vitest": "^3.2.4"
