--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "dependencies": {
     "@auth/core": "latest",
     "@auth/prisma-adapter": "^2.7.4",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@edge-runtime/vm": "latest",
     "@emotion/is-prop-valid": "latest",
     "@eslint/js": "latest",
@@ -58,7 +61,7 @@
     "@radix-ui/react-toggle": "latest",
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
-    "@supabase/supabase-js": "^2.46.2",
+    "@supabase/supabase-js": "^2.53.0",
     "@sveltejs/kit": "latest",
     "@testing-library/dom": "^10.4.1",
     "@types/debug": "latest",
@@ -81,20 +84,20 @@
     "eslint-plugin-prettier": "latest",
     "eslint-plugin-react": "latest",
     "eslint-plugin-react-hooks": "latest",
-    "framer-motion": "latest",
+    "framer-motion": "^12.23.11",
     "globals": "latest",
     "happy-dom": "latest",
     "input-otp": "latest",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.526.0",
+    "lucide-react": "^0.532.0",
     "next": "15.4.4",
     "next-auth": "4.24.11",
     "next-themes": "latest",
     "nodemailer": "^7.0.5",
     "pino": "latest",
-    "react": "19.1.0",
+    "react": "19.1.1",
     "react-day-picker": "^9.8.1",
-    "react-dom": "19.1.0",
+    "react-dom": "19.1.1",
     "react-hook-form": "latest",
     "react-resizable-panels": "latest",
     "recharts": "^3.1.0",
@@ -102,7 +105,7 @@
     "scrollreveal": "^4.0.9",
     "sonner": "latest",
     "stripe": "latest",
-    "svelte": "^5.37.0",
+    "svelte": "^5.37.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript-eslint": "latest",
