--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "@edge-runtime/vm": "latest",
     "@emotion/is-prop-valid": "latest",
     "@eslint/js": "latest",
-    "@hookform/resolvers": "^5.2.0",
-    "@next/bundle-analyzer": "15.4.4",
-    "@prisma/client": "latest",
+    "@hookform/resolvers": "^5.2.1",
+    "@next/bundle-analyzer": "15.4.5",
+    "@prisma/client": "^6.13.0",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -68,7 +68,7 @@
     "@types/eslint": "latest",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/nodemailer": "6.4.17",
-    "@types/react-dom": "^19.1.6",
+    "@types/react-dom": "^19.1.7",
     "@vercel/analytics": "^1.3.2",
     "@vercel/blob": "latest",
     "@vercel/speed-insights": "latest",
@@ -89,8 +89,8 @@
     "happy-dom": "latest",
     "input-otp": "latest",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.532.0",
-    "next": "15.4.4",
+    "lucide-react": "^0.534.0",
+    "next": "15.4.5",
     "next-auth": "4.24.11",
     "next-themes": "latest",
     "nodemailer": "^7.0.5",
@@ -99,7 +99,7 @@
     "react-day-picker": "^9.8.1",
     "react-dom": "19.1.1",
     "react-hook-form": "latest",
-    "react-resizable-panels": "latest",
+    "react-resizable-panels": "^3.0.4",
     "recharts": "^3.1.0",
     "resend": "latest",
     "scrollreveal": "^4.0.9",
@@ -112,24 +112,24 @@
     "vaul": "latest",
     "vue": "latest",
     "vue-router": "latest",
-    "zod": "^4.0.11",
+    "zod": "^4.0.13",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.1.0",
     "@types/node": "^24.1.0",
-    "@types/react": "19.1.8",
+    "@types/react": "19.1.9",
     "@vitest/browser": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.21",
-    "eslint-config-next": "15.4.4",
+    "eslint-config-next": "15.4.5",
     "jsdom": "^26.1.0",
     "postcss": "^8.5.6",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
-    "prisma": "^6.1.0",
-    "tailwind-scrollbar": "^3.1.0",
+    "prisma": "^6.13.0",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^3.4.0",
     "tsx": "^4.19.2",
     "typescript": "^5",
