chore: update pnpm to v10.13.1 and optimize configuration
- Update pnpm from 8.8.0 to 10.13.1 using Corepack
- Update packageManager field in package.json
- Update engine requirements to pnpm >=10.0.0
- Enhance .npmrc with additional optimizations for Vercel
- Regenerate pnpm-lock.yaml with new format
- Address peer dependency warnings (non-breaking)

--- a/.npmrc
+++ b/.npmrc
@@ -2,3 +2,5 @@ engine-strict=false
 resolution-mode=highest
 auto-install-peers=true
 prefer-frozen-lockfile=false
+shamefully-hoist=true
+strict-peer-dependencies=false
