--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@auth/core": "latest",
+    "@auth/core": "0.34.2",
     "@auth/prisma-adapter": "^2.7.4",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
@@ -92,7 +92,7 @@
     "next": "15.4.5",
     "next-auth": "4.24.11",
     "next-themes": "latest",
-    "nodemailer": "^7.0.5",
+    "nodemailer": "^6.9.15",
     "pino": "latest",
     "react": "19.1.1",
     "react-day-picker": "^9.8.1",
@@ -129,19 +129,22 @@
     "prettier-plugin-tailwindcss": "^0.6.9",
     "prisma": "^6.13.0",
     "tailwind-scrollbar": "^4.0.2",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "^3.4.17",
     "tsx": "^4.19.2",
     "typescript": "^5",
     "vitest": "^3.2.4"
   },
   "packageManager": "pnpm@10.13.1",
   "engines": {
-    "node": ">=20.12.0",
+    "node": "20.x",
     "pnpm": ">=10.0.0"
   },
   "pnpm": {
     "overrides": {
-      "@types/react": "19.1.9"
+      "@types/react": "19.1.9",
+      "@auth/core": "0.34.2",
+      "nodemailer": "6.9.15",
+      "tailwindcss": "3.4.17"
     }
   }
 }
