--- a/.npmrc
+++ b/.npmrc
@@ -4,3 +4,4 @@ auto-install-peers=true
 prefer-frozen-lockfile=false
 shamefully-hoist=true
 strict-peer-dependencies=false
+enable-pre-post-scripts=true
