--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@auth/core": "0.34.2",
+    "@auth/core": "0.40.0",
     "@auth/prisma-adapter": "^2.7.4",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
@@ -92,7 +92,7 @@
     "next": "15.4.5",
     "next-auth": "4.24.11",
     "next-themes": "latest",
-    "nodemailer": "^6.9.15",
+    "nodemailer": "^7.0.5",
     "pino": "latest",
     "react": "19.1.1",
     "react-day-picker": "^9.8.1",
@@ -142,9 +142,19 @@
   "pnpm": {
     "overrides": {
       "@types/react": "19.1.9",
-      "@auth/core": "0.34.2",
-      "nodemailer": "6.9.15",
+      "@auth/core": "0.40.0",
+      "nodemailer": "7.0.5",
       "tailwindcss": "3.4.17"
-    }
+    },
+    "onlyBuiltDependencies": [
+      "@prisma/client",
+      "@prisma/engines",
+      "@vercel/speed-insights",
+      "esbuild",
+      "prisma",
+      "scrollreveal",
+      "sharp",
+      "unrs-resolver"
+    ]
   }
 }
