--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/nodemailer": "6.4.17",
     "@types/react-dom": "^19.1.7",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@vercel/analytics": "^1.3.2",
     "@vercel/blob": "latest",
     "@vercel/speed-insights": "latest",
@@ -99,6 +100,7 @@
     "react-dom": "19.1.1",
     "react-hook-form": "latest",
     "react-resizable-panels": "^3.0.4",
+    "react-syntax-highlighter": "^15.6.1",
     "recharts": "^3.1.0",
     "resend": "latest",
     "scrollreveal": "^4.0.9",
