--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "test": "vitest",
     "test:coverage": "vitest --coverage",
     "test:ui": "vitest --ui",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "chromatic": "chromatic --project-token=<TOKEN>"
   },
   "dependencies": {
     "@auth/core": "0.40.0",
-    "@auth/prisma-adapter": "^2.7.4",
+    "@auth/prisma-adapter": "^2.10.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -66,11 +69,11 @@
     "@testing-library/dom": "^10.4.1",
     "@types/debug": "latest",
     "@types/eslint": "latest",
-    "@types/jsonwebtoken": "^9.0.7",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/nodemailer": "6.4.17",
     "@types/react-dom": "^19.1.7",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "@vercel/analytics": "^1.3.2",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "latest",
     "@vercel/speed-insights": "latest",
     "@vitest/browser": "latest",
@@ -94,46 +97,55 @@
     "next": "15.4.5",
     "next-auth": "4.24.11",
     "next-themes": "latest",
-    "nodemailer": "^7.0.5",
+    "nodemailer": "7.0.5",
     "pino": "latest",
     "react": "19.1.1",
     "react-day-picker": "^9.8.1",
     "react-dom": "19.1.1",
-    "react-hook-form": "latest",
+    "react-hook-form": "^7.62.0",
     "react-resizable-panels": "^3.0.4",
     "react-syntax-highlighter": "^15.6.1",
-    "recharts": "^3.1.0",
-    "resend": "latest",
+    "recharts": "^3.1.2",
+    "resend": "^4.8.0",
     "scrollreveal": "^4.0.9",
-    "sonner": "latest",
+    "sonner": "^2.0.7",
     "stripe": "latest",
-    "svelte": "^5.37.2",
+    "svelte": "^5.37.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript-eslint": "latest",
+    "typescript-eslint": "^8.39.0",
     "vaul": "latest",
     "vue": "latest",
     "vue-router": "latest",
-    "zod": "^4.0.14",
+    "zod": "^4.0.15",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "4.1.0",
+    "@storybook/addon-essentials": "9.0.0-alpha.12",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/addon-vitest": "^9.1.1",
+    "@storybook/nextjs": "^9.1.1",
+    "@storybook/test": "^8.6.14",
     "@testing-library/jest-dom": "^6.6.4",
-    "@testing-library/react": "^16.1.0",
-    "@types/node": "^24.1.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^24.2.0",
     "@types/react": "19.1.9",
     "@vitest/browser": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.21",
     "eslint-config-next": "15.4.5",
+    "eslint-plugin-storybook": "9.1.1",
     "jsdom": "^26.1.0",
     "postcss": "^8.5.6",
-    "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "prisma": "^6.13.0",
+    "storybook": "^9.1.1",
     "tailwind-scrollbar": "^4.0.2",
-    "tailwindcss": "^3.4.17",
-    "tsx": "^4.19.2",
+    "tailwindcss": "3.4.17",
+    "tsx": "^4.20.3",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
   },
