--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "quality:check": "pnpm format:check && pnpm lint && pnpm lint:md",
     "quality:fix": "pnpm format && pnpm lint:fix && pnpm fix:md",
     "start": "next start",
-    "test": "vitest",
-    "test:coverage": "vitest --coverage",
+    "test": "vitest --run",
+    "test:watch": "vitest",
+    "test:storybook": "echo 'Storybook tests temporarily disabled'",
+    "test:coverage": "vitest --coverage --run",
     "test:ui": "vitest --ui",
     "type-check": "tsc --noEmit",
     "storybook": "storybook dev -p 6006",
@@ -145,6 +147,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.2.0",
     "@types/react": "19.1.9",
+    "@vitejs/plugin-react": "^4.7.0",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "3.2.4",
     "@vitest/ui": "^3.2.4",
@@ -153,6 +156,7 @@
     "eslint-plugin-storybook": "9.1.1",
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
+    "markdown-to-jsx": "^7.7.13",
     "markdownlint": "^0.38.0",
     "markdownlint-cli": "^0.45.0",
     "playwright": "^1.54.2",
