docs: sync env vars and test instructions

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,12 @@
 
 # Database (Prisma + Supabase)
 DATABASE_URL="postgresql://username:password@host:port/database?schema=public"
+DIRECT_URL="postgresql://username:password@host:port/database?schema=public"
 
 # Supabase Configuration
 NEXT_PUBLIC_SUPABASE_URL="https://your-project.supabase.co"
 NEXT_PUBLIC_SUPABASE_ANON_KEY="your-anon-key-here"
+SUPABASE_SERVICE_ROLE_KEY="your-service-role-key"
 
 # NextAuth
 NEXTAUTH_URL="http://localhost:3000"
@@ -17,3 +19,8 @@ RESEND_API_KEY="your-resend-api-key"
 # Other integrations
 STRIPE_SECRET_KEY="your-stripe-secret-key"
 MERCADO_PAGO_TOKEN="your-mercado-pago-token"
+ZAPSIGN_TOKEN="your-zapsign-token"
+MELHOR_ENVIO_TOKEN="your-melhor-envio-token"
+
+# Logging
+LOG_LEVEL="info"
