--- a/.github/workflows/ci-backup.yml
+++ b/.github/workflows/ci-backup.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline (Fallback)
+name: CI/CD Pipeline
 
 on:
   push:
@@ -19,9 +19,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'pnpm'
 
-      - name: Install pnpm globally
-        run: npm install -g pnpm@10
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
 
       - name: Verify pnpm installation
         run: |
@@ -29,6 +32,8 @@ jobs:
           pnpm --version
           echo "PNPM location:"
           which pnpm
+          echo "PATH:"
+          echo $PATH
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -66,9 +71,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'pnpm'
 
-      - name: Install pnpm globally
-        run: npm install -g pnpm@10
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
 
       - name: Verify pnpm installation
         run: |
@@ -107,9 +115,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'pnpm'
 
-      - name: Install pnpm globally
-        run: npm install -g pnpm@10
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
 
       - name: Verify pnpm installation
         run: |
