Update CI/CD workflows for improved reliability, add NextAuth debug mode to environment configuration, and enhance image handling in components

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,6 @@ MELHOR_ENVIO_TOKEN="your-melhor-envio-token"
 
 # Logging
 LOG_LEVEL="info"
+
+# NextAuth Debug Mode (set to 'true' to enable debug logging)
+NEXTAUTH_DEBUG=false
