--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline (Fallback)
+name: CI/CD Pipeline
 
 on:
   push:
@@ -7,128 +7,51 @@ on:
     branches: [main, develop]
 
 jobs:
-  quality:
-    name: Tests & Quality
+  test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'pnpm'
 
-      - name: Install pnpm globally
-        run: npm install -g pnpm@10
-
-      - name: Verify pnpm installation
-        run: |
-          echo "PNPM version:"
-          pnpm --version
-          echo "PNPM location:"
-          which pnpm
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: latest
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Generate Prisma client
+      - name: Generate Prisma Client
         run: pnpm db:generate
 
-      - name: Check Prisma setup
-        run: pnpm check:prisma
+      - name: Type check
+        run: pnpm type-check
 
-      - name: Run linting
+      - name: Lint
         run: pnpm lint
 
       - name: Run tests
         run: pnpm test
 
-      - name: Type check
-        run: pnpm type-check
-
       - name: Build application
         run: pnpm build
+        env:
+          DATABASE_URL: postgresql://dummy:dummy@localhost:5432/dummy
+          NEXTAUTH_SECRET: dummy-secret-for-ci
+          NEXTAUTH_URL: http://localhost:3000
 
       - name: Build Storybook
         run: pnpm build-storybook
 
-  storybook:
-    name: Storybook
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
-      - name: Install pnpm globally
-        run: npm install -g pnpm@10
-
-      - name: Verify pnpm installation
-        run: |
-          echo "PNPM version:"
-          pnpm --version
-          echo "PNPM location:"
-          which pnpm
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Generate Prisma client
-        run: pnpm db:generate
-
-      - name: Build Storybook
-        run: pnpm build-storybook
-
-      - name: Upload Storybook build
+      - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: storybook-static
-          path: storybook-static
-
-  chromatic:
-    name: Chromatic
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
-      - name: Install pnpm globally
-        run: npm install -g pnpm@10
-
-      - name: Verify pnpm installation
-        run: |
-          echo "PNPM version:"
-          pnpm --version
-          echo "PNPM location:"
-          which pnpm
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Generate Prisma client
-        run: pnpm db:generate
-
-      - name: Build Storybook
-        run: pnpm build-storybook
-
-      - name: Publish to Chromatic
-        uses: chromaui/action@latest
-        with:
-          projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-          workingDir: ./
+          name: build-files
+          path: .next/
+          retention-days: 1
