Refactor ESLint configuration by replacing .eslintrc.js and .eslintrc.json with .eslintrc.cjs, and update eslint.config.js to utilize flat config format. Adjust Next.js configuration to enable ESLint checks during builds and add environment variables. Update package dependencies for improved compatibility and performance.

--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@edge-runtime/vm": "latest",
     "@emotion/is-prop-valid": "latest",
-    "@eslint/js": "latest",
+    "@eslint/js": "9.33.0",
     "@hookform/resolvers": "^5.2.1",
     "@next/bundle-analyzer": "15.4.6",
     "@prisma/client": "^6.13.0",
@@ -95,8 +95,8 @@
     "@radix-ui/react-toggle": "latest",
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
-    "@supabase/supabase-js": "^2.53.0",
-    "@sveltejs/kit": "latest",
+    "@supabase/supabase-js": "^2.54.0",
+    "@sveltejs/kit": "2.27.3",
     "@testing-library/dom": "^10.4.1",
     "@types/debug": "latest",
     "@types/eslint": "latest",
@@ -124,12 +124,12 @@
     "happy-dom": "latest",
     "input-otp": "latest",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.536.0",
+    "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "next-auth": "4.24.11",
     "next-themes": "latest",
     "nodemailer": "7.0.5",
-    "pino": "latest",
+    "pino": "9.8.0",
     "react": "19.1.1",
     "react-day-picker": "^9.8.1",
     "react-dom": "19.1.1",
@@ -137,7 +137,7 @@
     "react-resizable-panels": "^3.0.4",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^3.1.2",
-    "resend": "^5.0.0",
+    "resend": "^6.0.1",
     "scrollreveal": "^4.0.9",
     "sonner": "^2.0.7",
     "stripe": "latest",
@@ -148,11 +148,13 @@
     "vaul": "latest",
     "vue": "latest",
     "vue-router": "latest",
-    "zod": "^4.0.15",
+    "zod": "^4.0.17",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "4.1.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@next/eslint-plugin-next": "^15.4.6",
     "@storybook/addon-a11y": "9.2.0-alpha.2",
     "@storybook/addon-docs": "9.2.0-alpha.2",
     "@storybook/addon-essentials": "9.0.0-alpha.12",
@@ -166,9 +168,9 @@
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^24.2.0",
+    "@types/node": "^24.2.1",
     "@types/react": "19.1.9",
-    "@vitejs/plugin-react": "^4.7.0",
+    "@vitejs/plugin-react": "^5.0.0",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "3.2.4",
     "@vitest/ui": "^3.2.4",
@@ -188,7 +190,7 @@
     "prisma": "^6.13.0",
     "storybook": "^9.1.1",
     "style-dictionary": "^5.0.1",
-    "stylelint": "^16.23.0",
+    "stylelint": "^16.23.1",
     "stylelint-config-standard": "^39.0.0",
     "stylelint-config-tailwindcss": "^1.0.0",
     "tailwind-scrollbar": "^4.0.2",
