chore: update Chromatic configuration and enhance Storybook decorators
- Removed unnecessary properties from .chromaticrc.json for cleaner configuration.
- Updated package.json to streamline Chromatic commands with project token.
- Added SidebarProviderDecorator in preview.tsx to mock sidebar context for improved story testing.

--- a/.chromaticrc.json
+++ b/.chromaticrc.json
@@ -1,11 +1,6 @@
 {
   "projectToken": "chpt_ed7c61c0587a8b0",
-  "buildScriptName": "build-storybook",
-  "storybookBuildDir": "storybook-static",
   "exitZeroOnChanges": true,
-  "onlyChanged": true,
   "autoAcceptChanges": false,
-  "skip": false,
-  "externals": ["public/**"],
-  "ignoreLastBuildOnBranch": "main"
+  "interactive": true
 }
