--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "type-check": "tsc --noEmit",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "chromatic": "chromatic",
-    "chromatic:ci": "chromatic --exit-zero-on-changes --only-changed",
+    "chromatic": "chromatic --project-token=chpt_ed7c61c0587a8b0",
+    "chromatic:test": "chromatic --project-token=chpt_ed7c61c0587a8b0 --exit-zero-on-changes",
     "chromatic:accept": "chromatic --auto-accept-changes",
     "design-system:build-tokens": "node scripts/build-design-tokens.js",
     "design-system:watch-tokens": "style-dictionary build --watch",
