feat: enhance API security and rate limiting for admin routes
- Implemented `requireAdminOrOperator` middleware to streamline authentication checks for admin and operator roles across multiple API routes.
- Added rate limiting functionality to the equipment and contact API routes to prevent abuse and ensure fair usage.
- Refactored existing GET and POST methods in the admin quotes and equipment routes to utilize the new authentication and rate limiting logic.
- Updated the contact route to include error handling and validation improvements, enhancing overall API robustness.

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,19 @@ GB-Locacoes/
 *.log
 *.sqlite
 *.dump
+eslint-output.txt
+build-output.txt
+test-output.txt
+
+# 🤖 Ferramentas de IA e editores
+.cursor/
+*.mdc
+.copilot/
+
+# 📊 Outputs de ferramentas de análise
+coverage/
+.nyc_output/
+lighthouse-report.html
 
 *storybook.log
 storybook-static
