chore: diagnóstico e melhorias de estabilidade na API e build
- Adiciona script `scripts/diagnose-database.js` para diagnóstico de conexão com banco (consultar docs/internal/critical-issues-resolved.md)
- Refatora rota `/api/health` para melhor detecção de status do banco e variáveis de ambiente
- Ajusta imports e tratamento de erro em `lib/prisma.ts` para evitar race conditions (ver docs/getting-started/troubleshooting.md)
- Atualiza dependências (exceto Prisma e Tailwind, conforme matriz de compatibilidade)
- Atualiza CHANGELOG.md com detalhes das correções
- Garante build estável e compatibilidade com Next.js 15.4.6 e Prisma 6.13.0

> Consultar sempre: docs/references/dependencies.md e docs/features/design-system.md

--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "check:compatibility": "node scripts/check-compatibility.cjs",
     "check:outdated-safe": "pnpm outdated | grep -E '@radix-ui|@testing-library|date-fns|lucide-react' || true",
     "update:safe": "pnpm update @radix-ui/react-* @testing-library/* date-fns lucide-react clsx",
-    "verify:after-update": "pnpm check:compatibility && pnpm run build && pnpm test"
+    "verify:after-update": "pnpm check:compatibility && pnpm run build && pnpm test",
+    "diagnose:database": "node scripts/diagnose-database.js"
   },
   "dependencies": {
     "@auth/core": "0.40.0",
