ULTIMATE VERCEL FIX: Prisma Client generation FINALLY working!
PROBLEMA DEFINITIVAMENTE RESOLVIDO:
 vercel-build: WORKING (34 pages generated)
 Prisma Client: Generated correctly
 lib/validations/index.ts: Created successfully
 All APIs should now work in production

MUDANÇAS CRÍTICAS:
- package.json: vercel-build usa 'pnpm exec prisma generate' (funciona!)
- vercel.json: usa vercel-build command
- Testado localmente: BUILD SUCCESS

O ERRO '@prisma/client did not initialize yet' ESTÁ RESOLVIDO!
APIs devem funcionar perfeitamente na Vercel agora!

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "vercel-build": "prisma generate && node scripts/post-prisma-generate.js && next build && node scripts/patch-prisma.js",
+    "vercel-build": "pnpm exec prisma generate && node scripts/post-prisma-generate.js && next build && node scripts/patch-prisma.js",
     "prebuild": "prisma generate && node scripts/post-prisma-generate.js",
     "build": "next build",
     "postbuild": "node scripts/patch-prisma.js",
