--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "pnpm run build",
+  "buildCommand": "pnpm run vercel-build",
   "installCommand": "pnpm install --frozen-lockfile=false",
   "images": {
     "formats": ["image/avif", "image/webp"],
